--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_service_files(
   ModifyOutputSInt16.srv
   ModifyOutputUInt16.srv
   ModifyOutputSInt32.srv
+  EthercatCommd.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -117,6 +118,8 @@ catkin_package(
 set(etherlab_include /opt/etherlab/include)
 set(etherlab_lib /opt/etherlab/lib/libethercat.so)
 set(utilities src/utilities.cpp)
+set(ethercat_communicator src/ethercat_communicator.cpp)
+set(services src/services.cpp)
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
@@ -141,7 +144,7 @@ include_directories(
 
 ## If we want to define MACROS this is the cmake way to do it:
 add_definitions(-DFREQUENCY=1000 -DRUN_TIME=300)
-add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp ${utilities})
+add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp ${utilities} ${ethercat_communicator} ${services})
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -153,7 +156,7 @@ add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp ${utilities})
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_generate_messages_cpp ${PROJECT_NAME}_gencpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}
