Tested Working Multi-Slave Version: 1.0

--- a/config/slaves.yaml
+++ b/config/slaves.yaml
@@ -9,3 +9,27 @@ ethercat_slaves :
         assign_activate: 0x0700
         input_port: 0x6010
         output_port: 0x7000
+    front_right_leg :
+        vendor_id: 0x00000A12
+        alias : 0
+        position: 1
+        product_code: 0x00a986fd
+        assign_activate: 0x0700
+        input_port: 0x6010
+        output_port: 0x7000
+    back_right_leg :
+        vendor_id: 0x00000A12
+        alias : 0
+        position: 2
+        product_code: 0x00a986fd
+        assign_activate: 0x0700
+        input_port: 0x6010
+        output_port: 0x7000
+    back_left_leg :
+        vendor_id: 0x00000A12
+        alias : 0
+        position: 3
+        product_code: 0x00a986fd
+        assign_activate: 0x0700
+        input_port: 0x6010
+        output_port: 0x7000
