Added new output data handler. This module will publish in a topic, the output data for every slave

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  EthercatData.msg
+  EthercatInputData.msg
+  EthercatOutputData.msg
   EthercatRawData.msg
 )
 
@@ -120,7 +121,7 @@ catkin_package(
 ###########
 set(etherlab_include /opt/etherlab/include)
 set(etherlab_lib /opt/etherlab/lib/libethercat.so)
-set(SOURCES src/utilities.cpp src/ethercat_communicator.cpp src/services.cpp src/ethercat_slave.cpp src/ethercat_data_handler.cpp)
+set(SOURCES src/utilities.cpp src/ethercat_communicator.cpp src/services.cpp src/ethercat_slave.cpp src/ethercat_input_data_handler.cpp src/ethercat_output_data_handler.cpp)
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
