Added deadline scheduling, to be tested. Removed from compile time the parameters specified: FREQUENCY and RUN_TIME. From now on, they are defined in the ethhercat_slaves.yaml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,7 +147,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 
 ## If we want to define MACROS this is the cmake way to do it:
-add_definitions(-DFREQUENCY=500 -DRUN_TIME=1200 -std=c++11)
+add_definitions(-std=c++11)
 add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp ${SOURCES})
 
 ## Rename C++ executable without prefix
