--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ docs/doxygen/html
 docs/doxygen/latex
 docs/doxygen/xml
 docs/build/
-etherlabmaster-code-mercurial/ethercat-1.5.2-merc/
+ethercat-1.5.2-merc/
+etherlab/ethercat-1.5.2-merc/
