added working synchronization Twincat mode. Don't realizing any differences though

--- a/etherlab/Makefile
+++ b/etherlab/Makefile
@@ -14,7 +14,7 @@ ethercatMaster: $(udevRulesFile)
 	# tar -xvf $(ethercatMasterZip)
 	cd $(ethercatMasterDirectory);\
 	./bootstrap;\
-	./configure --enable-generic --disable-8139too --with-e1000e-kernel=4.9;\
+	./configure --enable-generic --disable-8139too --enable-e1000e --with-e1000e-kernel=4.9 --enable-hrtimer --enable-cycles;\
 	make all modules;
 
 ethercatMasterInstall: ethercatMaster
